# gate-cutting

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: implementation-notes.html  implementation-notes.md  project-background.html  stim-refactor-plan.html
docs/ponchie-slidev/: README.md  package-lock.json  package.json  slides.md  style.css
experiments/exp1/: b1.py  benchmark_phase1.py
experiments/exp2/: b1.py  b2.py  benchmark_phase1.py  benchmark_phase2.py  check.py  device.json
gate_cutting/: __init__.py  circuits.py  cut_selection.py  device.py  gate_cutting.py  mip.py  stim_backend.py
legacy/ex2/: bad.txt  bad2.txt  device.good.json  e4.py  e5.py  ev1.py  good.txt
src/gate_cutting/: __init__.py  circuits.py  cut_selection.py  device.py  gate_cutting.py  mip.py  stim_backend.py
tests/: __init__.py  test_circuits.py  test_cut_selection.py  test_device.py  test_experiment_refactors.py  test_gate_cutting.py  test_mip.py  test_stim_backend.py  test_stim_integration.py  test_test_style.py
