[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "oqtopus-gate-cutting"
version = "0.1.0"
description = "Reusable gate-cutting components for OQTOPUS integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "stim",
  "qiskit",
  "qiskit-aer",
  "networkx",
  "scipy",
  "matplotlib",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "mypy",
  "build",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]
extend-exclude = [
  "legacy",
  "docs",
  "experiments",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E701",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
